--- a/Watertracker/makefile
+++ b/Watertracker/makefile
@@ -1,3 +1,5 @@
 #makefile for Water Tracker
+#Ian Zimmerman
+#April 28, 2021
 watertracker: H2OTracker.cpp tracker.cpp tracker.hpp
 	gcc -o watertracker.o H2OTracker.cpp tracker.cpp tracker.hpp -lstdc++ -I.
